chore(release): Launch v1.0.0 - The 'Neural Deck' Update 🚀
This release marks the stable V1.0.0 of HOMES: Neural Deck.

Changes included:
- 🔖 Version Bump: Updated application metadata to v1.0.0 (Stable).
- 📚 Documentation: Completely rewrote README.md with professional branding, usage guide, and feature breakdown.
- 🎨 UI Polish: Updated version badges in the main interface.

Ready for deployment to Vercel/Netlify/GitHub Pages.

Cycle: COMPLETE.
System: ONLINE.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="status-bar">
                     <span class="status-dot"></span> SYSTEM ONLINE
                 </div>
-                <p class="subtitle">AI VIDEO PIPELINE CONTROLLER v3.0</p>
+                <p class="subtitle">AI VIDEO PIPELINE CONTROLLER v1.0.0 (STABLE)</p>
             </header>
 
             <main>
