feat: enable audio test mode by allowing manual text input
Changes:
- Removed 'hidden' class from output section by default for immediate testing.
- Removed 'readonly' attribute from resultArea textarea to allow pasting/typing text.
- Added placeholder text to guide the user to paste text for audio testing.
- Synchronized main.js initialization logic with the index.html test mode state.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </section>
 
-                <section class="card output-zone hidden" id="outputSection">
+                <section class="card output-zone" id="outputSection">
                     <div class="card-header">
                         <span>// OUTPUT_PROTOCOL_V1</span>
                         <div class="actions">
@@ -69,7 +69,7 @@
                         </div>
                     </div>
 
-                    <textarea id="resultArea" readonly></textarea>
+                    <textarea id="resultArea" placeholder="Cole ou digite um texto aqui para testar o áudio..."></textarea>
                 </section>
             </main>
 
